objects/HealthCloudGA__JobFlowDataMapping__mdt.object
<CustomObject>
    <description>Source to Target field mapping for objects created in Job Flow</description>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the Mapping Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MappingGroupName__c</fullName>
        <description>Identifies a group of mappings to be applied to a particular flow</description>
        <label>Mapping Group Name</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceField__c</fullName>
        <description>Field on source object to access data to be mapped to target</description>
        <label>Source Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceObject__c</fullName>
        <description>Object from which to access field data being mapped to target</description>
        <label>Source Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TargetField__c</fullName>
        <description>Field on target object for which to assign value of source field in flow mapping.</description>
        <label>Target Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TargetObject__c</fullName>
        <description>Base object on which to assign the field specified by TargetField</description>
        <label>Target Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Job Flow Data Mapping</label>
    <pluralLabel>Job Flow Data Mappings</pluralLabel>
</CustomObject>